<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_agregar_contenido"
            android:icon="@drawable/ic_menu_agregar_contenido"
            android:title="@string/menu_agregar_contenido" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_menu_notificacion"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_agregar_usuario"
            android:icon="@drawable/ic_menu_agregar_usuario"
            android:title="@string/menu_agregar_usuario" />
    </group>
</menu>