<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lsmcolaborativoloal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_agregar_contenido"
        android:name="com.example.lsmcolaborativoloal.ui.agregar_contenido.AgregarContenidoFragment"
        android:label="@string/menu_agregar_contenido"
        tools:layout="@layout/fragment_agregar_contenido" />

    <fragment
        android:id="@+id/nav_notificaciones"
        android:name="com.example.lsmcolaborativoloal.ui.notificaciones.NotificacionesFragment"
        android:label="@string/menu_notificaciones"
        tools:layout="@layout/fragment_notificaciones" />

    <fragment
        android:id="@+id/nav_agregar_usuario"
        android:name="com.example.lsmcolaborativoloal.ui.agregar_usuario.AgregarUsuario"
        android:label="@string/menu_agregar_usuario"
        tools:layout="@layout/fragment_agregar_usuario" />


</navigation>